--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   bip32: ^2.0.0
   bip39: ^1.0.6
+  dio: ^4.0.6
   ed25519_edwards: ^0.3.1
   flutter:
     sdk: flutter
