--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   flutter:
     sdk: flutter
   pointycastle: ^3.6.2
+  bcs:
+    path: ../bcs/
 
 dev_dependencies:
   flutter_test:
