--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   sui:
-    path: ../sui
+    path: ../
+  another_flushbar: ^1.12.29
 
 dev_dependencies:
   flutter_test:
