--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   hex: ^0.2.0
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.0
+  web_socket_channel: ^2.4.0
 
 dev_dependencies:
   flutter_test:
