--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,9 @@ dependencies:
   ed25519_edwards: 0.3.1
   pointycastle: 3.7.3
   bcs:
-    path: ../bcs
+    git:
+      url: https://github.com/mofalabs/bcs.git
+      ref: "8da80be"
       
   dio: ^5.1.2
   hex: ^0.2.0
