--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
     path: ../
   another_flushbar: ^1.12.29
   focus_detector: ^2.0.1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
