--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -37,9 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   sui:
     path: ../
-  another_flushbar: ^1.12.29
+  another_flushbar: ^1.12.30
   focus_detector: ^2.0.1
   shared_preferences: ^2.2.2
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
