--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -37,8 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   sui:
     path: ../
+  markdown_widget: ^2.3.1
   another_flushbar: ^1.12.30
-  focus_detector: ^2.0.1
+  focus_detector_v2: ^3.1.0+1
   shared_preferences: ^2.2.2
   fluttertoast: ^8.2.2
   wave: ^0.2.2
@@ -66,9 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - lib/pages/share/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
