--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,10 @@ dependencies:
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.0
   web_socket_channel: ^2.4.0
+  poseidon:
+    git:
+      url: https://github.com/mofalabs/poseidon.git
+      ref: 615190c
 
 dev_dependencies:
   flutter_test:
