--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,10 @@ dependencies:
   bip39: 1.0.6
   ed25519_edwards: 0.3.1
   pointycastle: 3.7.3
-  bcs: ^0.0.6
+  bcs:
+    git:
+      url: https://github.com/mofalabs/bcs
+      ref: f339c300554c70020cf8283ade8ef542f48e384b 
   dio: ^5.1.2
   hex: ^0.2.0
   freezed_annotation: ^2.2.0
