--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.0
   web_socket_channel: ^2.4.0
+  graphql: ^5.1.3
 
 dev_dependencies:
   flutter_test:
